--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">ArtushockEnglishDictionary</string>
     <string name="translation_image">Translation image</string>
     <string name="reload">Reload</string>
+    <string name="search">Search</string>
+    <string name="history">History</string>
+    <string name="logo_view">Logo view</string>
 </resources>
