--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="search">Search</string>
     <string name="history">History</string>
     <string name="logo_view">Logo view</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
